Update resource graph.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,58 @@
             "env": {
                 "PATH": "/home/llogan/.scspkg/packages/iowarp_runtime/sbin:/home/llogan/.scspkg/packages/iowarp_runtime/bin:/usr/local/cuda/bin:/usr/local/cuda/gds/tools:/home/llogan/Documents/Projects/scspkg/packages/cuda/sbin:/home/llogan/Documents/Projects/scspkg/packages/cuda/bin:/opt/rocm/bin:/home/llogan/Documents/Projects/scspkg/packages/rocm/sbin:/home/llogan/Documents/Projects/scspkg/packages/rocm/bin:/home/llogan/.venv/bin:/home/llogan/.local/bin:/mnt/home/Projects/spack/bin:/home/llogan/.vscode-server/cli/servers/Stable-848b80aeb52026648a8ff9f7c45a9b0a80641e2e/server/bin/remote-cli:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin:/home/llogan/.vscode-server/extensions/ms-python.debugpy-2025.8.0-linux-x64/bundled/scripts/noConfigScripts:/home/llogan/.vscode-server/data/User/globalStorage/github.copilot-chat/debugCommand"
             }
+        },
+        {
+            "name": "Debug jarvis ppl run",
+            "type": "python",
+            "python": "/home/llogan/.venv/bin/python",
+            "request": "launch",
+            "program": "/home/llogan/.venv/bin/jarvis",
+            "args": [
+                "ppl",
+                "run"
+            ],
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "env": {
+                "PATH": "/home/llogan/.scspkg/packages/iowarp_runtime/sbin:/home/llogan/.scspkg/packages/iowarp_runtime/bin:/usr/local/cuda/bin:/usr/local/cuda/gds/tools:/home/llogan/Documents/Projects/scspkg/packages/cuda/sbin:/home/llogan/Documents/Projects/scspkg/packages/cuda/bin:/opt/rocm/bin:/home/llogan/Documents/Projects/scspkg/packages/rocm/sbin:/home/llogan/Documents/Projects/scspkg/packages/rocm/bin:/home/llogan/.venv/bin:/home/llogan/.local/bin:/mnt/home/Projects/spack/bin:/home/llogan/.vscode-server/cli/servers/Stable-848b80aeb52026648a8ff9f7c45a9b0a80641e2e/server/bin/remote-cli:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin:/home/llogan/.vscode-server/extensions/ms-python.debugpy-2025.8.0-linux-x64/bundled/scripts/noConfigScripts:/home/llogan/.vscode-server/data/User/globalStorage/github.copilot-chat/debugCommand"
+            }
+        },
+        {
+            "name": "Debug jarvis ppl run with file",
+            "type": "python",
+            "python": "/home/llogan/.venv/bin/python",
+            "request": "launch",
+            "program": "/home/llogan/.venv/bin/jarvis",
+            "args": [
+                "ppl",
+                "run",
+                "builtin/pipelines/simple_test.yaml",
+                "yaml"
+            ],
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "env": {
+                "PATH": "/home/llogan/.scspkg/packages/iowarp_runtime/sbin:/home/llogan/.scspkg/packages/iowarp_runtime/bin:/usr/local/cuda/bin:/usr/local/cuda/gds/tools:/home/llogan/Documents/Projects/scspkg/packages/cuda/sbin:/home/llogan/Documents/Projects/scspkg/packages/cuda/bin:/opt/rocm/bin:/home/llogan/Documents/Projects/scspkg/packages/rocm/sbin:/home/llogan/Documents/Projects/scspkg/packages/rocm/bin:/home/llogan/.venv/bin:/home/llogan/.local/bin:/mnt/home/Projects/spack/bin:/home/llogan/.vscode-server/cli/servers/Stable-848b80aeb52026648a8ff9f7c45a9b0a80641e2e/server/bin/remote-cli:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin:/home/llogan/.vscode-server/extensions/ms-python.debugpy-2025.8.0-linux-x64/bundled/scripts/noConfigScripts:/home/llogan/.vscode-server/data/User/globalStorage/github.copilot-chat/debugCommand"
+            }
+        },
+        {
+            "name": "Debug jarvis ppl run (Python module)",
+            "type": "python",
+            "python": "/home/llogan/.venv/bin/python",
+            "request": "launch",
+            "module": "jarvis_cd.core.cli",
+            "args": [
+                "ppl",
+                "run"
+            ],
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "cwd": "${workspaceFolder}",
+            "env": {
+                "PYTHONPATH": "${workspaceFolder}",
+                "PATH": "/home/llogan/.scspkg/packages/iowarp_runtime/sbin:/home/llogan/.scspkg/packages/iowarp_runtime/bin:/usr/local/cuda/bin:/usr/local/cuda/gds/tools:/home/llogan/Documents/Projects/scspkg/packages/cuda/sbin:/home/llogan/Documents/Projects/scspkg/packages/cuda/bin:/opt/rocm/bin:/home/llogan/Documents/Projects/scspkg/packages/rocm/sbin:/home/llogan/Documents/Projects/scspkg/packages/rocm/bin:/home/llogan/.venv/bin:/home/llogan/.local/bin:/mnt/home/Projects/spack/bin:/home/llogan/.vscode-server/cli/servers/Stable-848b80aeb52026648a8ff9f7c45a9b0a80641e2e/server/bin/remote-cli:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin:/home/llogan/.vscode-server/extensions/ms-python.debugpy-2025.8.0-linux-x64/bundled/scripts/noConfigScripts:/home/llogan/.vscode-server/data/User/globalStorage/github.copilot-chat/debugCommand"
+            }
         }
     ]
 }
