More unit tests and coverage

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,4 +1,17 @@
 # .coveragerc
 [run]
 source = .
-omit = *test*
+omit =
+    *test*
+    */builtin/*
+    */build/*
+
+[report]
+exclude_lines =
+    pragma: no cover
+    def __repr__
+    raise AssertionError
+    raise NotImplementedError
+    if __name__ == .__main__.:
+    if TYPE_CHECKING:
+    @abstractmethod
