--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -7,18 +7,15 @@ WORKDIR /app
 COPY . /app
 
 # Install build dependencies and Python dependencies from pyproject.toml
-RUN pip install --upgrade pip setuptools wheel && \
-    pip install setuptools-scm && \
-    pip install pyyaml pandas && \
-    pip install pytest pytest-cov
+RUN pip install --break-system-packages setuptools-scm pyyaml pandas pytest pytest-cov
 
 # Install the jarvis_cd package in editable mode
 # This ensures the package and all its modules are importable in tests
-RUN pip install -e .
+RUN pip install --break-system-packages -e .
 
-# Load MPI via spack and run tests
+# Load MPI via spack and run tests (if spack is available)
 # The entrypoint will be set to run tests
-ENTRYPOINT ["/bin/bash", "-c", "source /opt/spack/share/spack/setup-env.sh && spack load mpi && exec \"$@\"", "--"]
+ENTRYPOINT ["/bin/bash", "-c", "if [ -f /opt/spack/share/spack/setup-env.sh ]; then source /opt/spack/share/spack/setup-env.sh && spack load mpi; fi && exec \"$@\"", "--"]
 
 # Default command runs pytest
 CMD ["pytest", "-xvs", "test/"]
