--- a/builtin/pipelines/examples/ior_podman_test.yaml
+++ b/builtin/pipelines/examples/ior_podman_test.yaml
@@ -9,7 +9,7 @@ name: ior_podman_test
 # No env field - will capture current environment automatically
 
 # Container configuration
-container_name: ior_test_container_podman
+container_build: ior_test_container_podman
 container_engine: podman
 container_base: docker.io/iowarp/iowarp-deps:ai
 
