--- a/.github/workflows/build-containers.yaml
+++ b/.github/workflows/build-containers.yaml
@@ -1,19 +1,15 @@
-name: Build Docker Images
+name: Build Containers
 
 on:
   workflow_dispatch:
-    inputs:
-      debug_enabled:
-        description: 'Run the build with tmate debugging enabled'
-        required: false
-        default: false
 
 jobs:
-  build-docker-images:
+  build:
     runs-on: ubuntu-latest
+    timeout-minutes: 800
 
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Login to Docker Hub
@@ -28,18 +24,22 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build build image
-        uses: docker/build-push-action@v5
+      - name: Build and push build image
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: ./docker/build.Dockerfile
+          builder: ${{ steps.buildx.outputs.name }}
+          platforms: linux/amd64
           push: true
           tags: iowarp/ppi-jarvis-cd-build:latest
 
-      - name: Build deploy image
-        uses: docker/build-push-action@v5
+      - name: Build and push deploy image
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: ./docker/deploy.Dockerfile
+          builder: ${{ steps.buildx.outputs.name }}
+          platforms: linux/amd64
           push: true
           tags: iowarp/ppi-jarvis-cd:latest
