Add ARM64 architecture support to container builds
Updated GitHub Actions workflow to build multi-architecture container
images supporting both AMD64 and ARM64 platforms.

Changes:
- Added linux/arm64 to platforms specification
- Build images now support ARM64 Linux systems

Images affected:
- iowarp/ppi-jarvis-cd-build:latest
- iowarp/ppi-jarvis-cd:latest

--- a/.github/workflows/build-containers.yaml
+++ b/.github/workflows/build-containers.yaml
@@ -30,8 +30,7 @@ jobs:
         with:
           context: .
           file: ./docker/build.Dockerfile
-          builder: ${{ steps.buildx.outputs.name }}
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: iowarp/ppi-jarvis-cd-build:latest
 
@@ -40,7 +39,6 @@ jobs:
         with:
           context: .
           file: ./docker/deploy.Dockerfile
-          builder: ${{ steps.buildx.outputs.name }}
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: iowarp/ppi-jarvis-cd:latest
