--- a/.github/workflows/build-containers.yaml
+++ b/.github/workflows/build-containers.yaml
@@ -24,12 +24,14 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        id: buildx
 
       - name: Build and push build image
         uses: docker/build-push-action@v6
         with:
           context: .
           file: ./docker/build.Dockerfile
+          builder: ${{ steps.buildx.outputs.name }}
           platforms: linux/amd64,linux/arm64
           push: true
           tags: iowarp/ppi-jarvis-cd-build:latest
@@ -39,6 +41,7 @@ jobs:
         with:
           context: .
           file: ./docker/deploy.Dockerfile
+          builder: ${{ steps.buildx.outputs.name }}
           platforms: linux/amd64,linux/arm64
           push: true
           tags: iowarp/ppi-jarvis-cd:latest
