--- a/builtin/pipelines/examples/ior_container_test.yaml
+++ b/builtin/pipelines/examples/ior_container_test.yaml
@@ -11,7 +11,7 @@ name: ior_container_test
 # Container configuration
 container_build: ior_test_container
 container_engine: docker
-container_base: iowarp/iowarp-deps:ai
+container_base: iowarp/iowarp-build:latest
 
 pkgs:
   # IOR benchmark with container deployment
